# obmc-webapp

./: .gitignore  Dockerfile  docker.test.sh  lighttpd.conf  meson.build  meson_options.txt  obmc-webserver.service.in  obmc-webserver.socket  pam-webserver
include/: request.hpp
src/: definitions.hpp  main.cpp  relation_provider.hpp  routes.cpp  status_provider.hpp  system_queries.cpp  system_queries.hpp  version_provider.hpp
src/core/: application.cpp  application.hpp  connection.cpp  connection.hpp  exceptions.hpp  request.cpp  request.hpp  response.cpp  response.hpp  router.cpp  router.hpp
src/core/broker/: broker.hpp  dbus_broker.cpp  dbus_broker.hpp
src/core/connect/: connect.hpp  dbusConnect.hpp
src/core/entity/: cache.hpp  dbus_query.cpp  dbus_query.hpp  entity.cpp  entity.hpp  query.hpp
src/core/helpers/: compares.hpp  utils.hpp
src/core/route/handlers/: graphql_handler.cpp  graphql_handler.hpp
src/entity/interface/: action.hpp  cache.hpp  model.hpp  node.hpp  service.hpp  validator.hpp
src/http/: headers.hpp
src/logger/: logger.hpp
src/service/: authorization.hpp  configuration.hpp  session.hpp
subprojects/: fastcgi++.wrap
tests/conf/: bmcweb_persistent_data.json
tests/http/: headers_utest.cpp
